# hermes-mobile

./: .gitignore  AGENTS.md  DESIGN_SYSTEM.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  README.md  opencode.json
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/deployment/jarvis-profile/: README.md  config.yaml
backend/hermes_bridge/: __init__.py  apns.py  auth.py  config.py  main.py  proxy.py  runs.py  sse_proxy.py  webui_client.py
backend/jarvis_bridge/: __init__.py  apns.py  approvals.py  auth.py  config.py  main.py  policy.py  proxy.py  runs.py  sse_proxy.py  tasks.py  webui_client.py
backend/tests/: __init__.py  test_proxy.py  test_secretary.py
docs/: CURRENT_STATE.md  DECISIONS.md  NEXT_STEPS.md  PROJECT_CONTEXT.md  ROLLBACK_BASELINE.md
ios/Hermes/: Hermes.entitlements  HermesApp.swift  Info.plist
ios/Hermes.xcodeproj/: project.pbxproj
ios/Hermes.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/Hermes.xcodeproj/project.xcworkspace/xcshareddata/: IDEWorkspaceChecks.plist
ios/Hermes.xcodeproj/xcshareddata/xcschemes/: Hermes.xcscheme
ios/Hermes/App/Core/: APIConfig.swift  AnyCodable.swift  AppState.swift  BackgroundTasks.swift  HermesClient.swift
ios/Hermes/App/Features/: HermesStateViews.swift
ios/Hermes/App/Features/Conversation/: ComposerView.swift  ConversationView.swift  ConversationViewModel.swift  MessageCell.swift  MessageListView.swift
ios/Hermes/App/Features/FirstRun/: FirstRunView.swift  FirstRunViewModel.swift
ios/Hermes/App/Haptics/: HapticManager.swift
ios/Hermes/App/Logging/: Logger+.swift
ios/Hermes/App/Models/: ChatMessage.swift  HermesModels.swift  SSEEvent.swift
ios/Hermes/App/Networking/: APIError.swift  HermesAPI.swift
ios/Hermes/App/Persistence/: HermesStore.swift  KeychainStore.swift
ios/Hermes/App/Rendering/: CodeBlockView.swift  HeightAwareMarkdown.swift  MarkdownParser.swift  MarkdownText.swift  MarkdownWebView.swift  SyntaxHighlighter.swift  WebViewConfig.swift
ios/JARVIS/: Info.plist  JARVIS.entitlements  JarvisApp.swift
ios/JARVIS.xcodeproj/: project.pbxproj
ios/JARVIS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/JARVIS.xcodeproj/xcshareddata/xcschemes/: JARVIS.xcscheme
ios/JARVIS/App/Core/: APIConfig.swift  AnyCodable.swift  AppState.swift  BackgroundTasks.swift  JarvisClient.swift
ios/JARVIS/App/Features/: JarvisStateViews.swift
ios/JARVIS/App/Haptics/: HapticManager.swift
ios/JARVIS/App/Logging/: Logger+.swift
ios/JARVIS/App/Models/: ChatMessage.swift  JarvisModels.swift  SSEEvent.swift
ios/JARVIS/App/Networking/: APIError.swift  JarvisAPI.swift
ios/JARVIS/App/Persistence/: JarvisStore.swift  KeychainStore.swift
ios/JARVIS/App/Rendering/: CodeBlockView.swift  MarkdownParser.swift  MarkdownText.swift  SyntaxHighlighter.swift
ios/JARVIS/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/JARVIS/Assets.xcassets/LaunchBackground.colorset/: Contents.json
ios/JARVIS/Assets.xcassets/LaunchLogo.imageset/: Contents.json
ios/JARVISTests/: JARVISApprovalTests.swift
(+17 files in other folders)
