[project]
name = "hermes-mobile-bridge"
version = "0.1.0"
description = "Bearer-auth bridge between the Hermes iOS app and hermes-webui"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "httpx>=0.27,<1.0",
    "sse-starlette>=2.1,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "anyio>=4.4,<5.0",
]

[project.optional-dependencies]
# v1.1 — APNs push notifications on backgrounded turn completion.
#   uv sync --extra apns
apns = ["apns2>=0.7,<2.0"]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "respx>=0.21,<1.0",
    "ruff>=0.6,<1.0",
    "httpx-sse>=0.4",
    # Pinned transitive overrides so respx/h2/hyperframe resolve on 3.12+:
    # upstream hyperframe 5.x uses `collections.MutableSet`, removed in 3.10+.
    "h2>=4.2,<5.0",
    "hyperframe>=6.1,<8.0",
    "httpcore>=1.0.4,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_bridge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]