[project]
name = "jarvis-mobile-bridge"
version = "0.1.0"
description = "Bearer-auth bridge between the JARVIS iPhone app and hermes-webui"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "httpx>=0.27,<1.0",
    "sse-starlette>=2.1,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "anyio>=4.4,<5.0",
]

# NOTE: APNs (v1.1) was previously declared as an `apns` extra pulling in
# `apns2>=0.7`. That pins `hyper==0.7.0` → `h2<3`, which collides with our
# dev-deps pin `h2>=4.2` (required by httpx 0.27+ / respx on Python 3.12+).
# `apns2` has been unmaintained since 2020 and is incompatible with the
# modern h2 stack. APNs is deferred to v1.1 — pick a maintained library
# (aioapns or httpx-based) when actually shipping push.

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "respx>=0.21,<1.0",
    "ruff>=0.6,<1.0",
    "httpx-sse>=0.4",
    # Pinned transitive overrides so respx/h2/hyperframe resolve on 3.12+:
    # upstream hyperframe 5.x uses `collections.MutableSet`, removed in 3.10+.
    "h2>=4.2,<5.0",
    "hyperframe>=6.1,<8.0",
    "httpcore>=1.0.4,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jarvis_bridge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
